css to the separated file

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,97 +4,8 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-            {#<link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.css') }}">#}
+            <link href="{{ asset('bundles/app/css/gallery.css') }}" type="text/css" rel="stylesheet" />
         {% endblock %}
-        <style>
-            @media (min-width: 768px) {
-                .container {
-                    width: 750px;
-                }
-            }
-            @media (min-width: 992px) {
-                .container {
-                    width: 970px;
-                }
-            }
-            @media (min-width: 1200px) {
-                .container  {
-                    width: 1170px;
-                }
-            }
-            body {
-                font-size: 14px;
-                line-height: 1.42857143;
-            }
-            .container {
-                padding-right: 15px;
-                padding-left: 15px;
-                margin-right: auto;
-                margin-left: auto;
-                box-sizing: border-box;
-                -webkit-box-sizing: border-box;
-                -moz-box-sizing: border-box;
-                clear: both;
-            }
-            .photo-border {
-                margin-left: 15px;
-                margin-right: 15px;
-                margin-bottom: 20px;
-                border: 1px solid #337ab7;
-                border-radius: 4px;
-            }
-
-            .photo {
-                float: left;
-                position: relative;
-                min-height: 1px;
-                border-radius: 4px;
-                width: 33.33%;
-                background-color: #fff;
-                cursor: pointer;
-            }
-            .photo-header {
-                background-color: #337ab7;
-                color: #fff;
-                border-color: #337ab7;
-                padding: 10px 15px;
-                border-top-left-radius: 3px;
-                border-top-right-radius: 3px;
-            }
-            .photo-body {
-                padding: 15px;
-            }
-
-            .pagination {
-                display: inline-block;
-                padding-left: 0;
-                margin: 20px 0;
-                border-radius: 4px;
-                clear: both;
-            }
-            .pagination > li {
-                display: inline;
-            }
-
-            .pagination > li > a {
-                position: relative;
-                float: left;
-                padding: 6px 12px;
-                margin-left: -1px;
-                color: #337ab7;
-                text-decoration: none;
-                background-color: #fff;
-                border: 1px solid #ddd;
-            }
-
-            .pagination > li > a.active{
-                color: red;
-            }
-
-            .pagination > li > a.paginationLink{
-                cursor: pointer;
-            }
-        </style>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
